--- a/index.html
+++ b/index.html
@@ -779,15 +779,6 @@ function sumPostTurnoverPointsByType(games, type, teamAbbr) {
     return games.reduce((s,g) => s + sumPostTurnoverPoints(g, type, teamAbbr), 0);
 }
 
-function countPostTurnoverScoringDrives(game, type, teamAbbr) {
-    const drives = (game && game.post_turnover_drives) || [];
-    return drives.reduce((count, d) => {
-        if (teamAbbr && d.recovered_by !== teamAbbr) return count;
-        if (type && d.turnover_type !== type) return count;
-        return count + ((d.points_scored || 0) > 0 ? 1 : 0);
-    }, 0);
-}
-
 function sumSpecial(games, field) {
     return games.reduce((s,g) => s + ((g.special_teams && g.special_teams[field]) || 0), 0);
 }
@@ -2382,8 +2373,8 @@ function renderPostTurnover() {
             ${chartContainer('postToTotalsChart', '260px')}
         </div>
         <div class="glass rounded-xl p-4">
-            <div class="text-xs text-zinc-400 mb-2">Scoring post-turnover drives per game by turnover type</div>
-            ${chartContainer('postToPerGameChart', '260px')}
+            <div class="text-xs text-zinc-400 mb-2">Points scored off takeaways per game</div>
+            ${chartContainer('postToPerGameChart', '300px')}
         </div>
     </div>`;
 
@@ -2445,10 +2436,8 @@ function initPostTurnoverCharts() {
     const aPointsOffFum = sumPostTurnoverPointsByType(af, 'FUM', aa.abbr);
     const maxGames = Math.max(gf.length, af.length);
     const labels = Array.from({length: maxGames}, (_,i) => `G${i+1}`);
-    const gIntScoreDrivesByGame = Array.from({length: maxGames}, (_,i) => countPostTurnoverScoringDrives(gf[i], 'INT', ga.abbr));
-    const gFumScoreDrivesByGame = Array.from({length: maxGames}, (_,i) => countPostTurnoverScoringDrives(gf[i], 'FUM', ga.abbr));
-    const aIntScoreDrivesByGame = Array.from({length: maxGames}, (_,i) => countPostTurnoverScoringDrives(af[i], 'INT', aa.abbr));
-    const aFumScoreDrivesByGame = Array.from({length: maxGames}, (_,i) => countPostTurnoverScoringDrives(af[i], 'FUM', aa.abbr));
+    const gPointsByGame = Array.from({length: maxGames}, (_,i) => sumPostTurnoverPoints(gf[i], null, ga.abbr));
+    const aPointsByGame = Array.from({length: maxGames}, (_,i) => sumPostTurnoverPoints(af[i], null, aa.abbr));
     const totalsChart = safeInitChart('postToTotalsChart');
     if (totalsChart) safeSetOption(totalsChart, 'postToTotalsChart', {
         backgroundColor: 'transparent',
@@ -2466,15 +2455,13 @@ function initPostTurnoverCharts() {
     if (perGameChart) safeSetOption(perGameChart, 'postToPerGameChart', {
         backgroundColor: 'transparent',
         tooltip: { trigger: 'axis' },
-        legend: { data: ['UGA INT score drives', 'UGA FUM score drives', 'ASU INT score drives', 'ASU FUM score drives'], textStyle: { color: '#a1a1aa' } },
-        grid: { left: 30, right: 20, top: 30, bottom: 30, containLabel: true },
+        legend: { top: 0, data: ['UGA Pts Off TO', 'ASU Pts Off TO'], textStyle: { color: '#a1a1aa' } },
+        grid: { left: 30, right: 20, top: 52, bottom: 30, containLabel: true },
         xAxis: { type: 'category', data: labels, axisLabel: { color: '#71717a' } },
         yAxis: { type: 'value', minInterval: 1, axisLabel: { color: '#71717a' }, splitLine: { lineStyle: { color: 'rgba(255,255,255,0.05)' } } },
         series: [
-            { name: 'UGA INT score drives', type: 'bar', stack: 'UGA', data: gIntScoreDrivesByGame, itemStyle: { color: '#ef4444' } },
-            { name: 'UGA FUM score drives', type: 'bar', stack: 'UGA', data: gFumScoreDrivesByGame, itemStyle: { color: '#fca5a5' } },
-            { name: 'ASU INT score drives', type: 'bar', stack: 'ASU', data: aIntScoreDrivesByGame, itemStyle: { color: '#f97316' } },
-            { name: 'ASU FUM score drives', type: 'bar', stack: 'ASU', data: aFumScoreDrivesByGame, itemStyle: { color: '#fdba74' } },
+            { name: 'UGA Pts Off TO', type: 'bar', data: gPointsByGame, itemStyle: { color: '#ef4444' } },
+            { name: 'ASU Pts Off TO', type: 'bar', data: aPointsByGame, itemStyle: { color: '#f97316' } },
         ]
     });
     const charts = [totalsChart, perGameChart].filter(Boolean);
